--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue2-datepicker",
-  "description": "A Datepicker Component For Vue2",
+  "name": "vue2-datepicker-mask",
+  "description": "A Datepicker Component For Vue2. Forked from vue2-datepicker",
   "main": "dist/build.js",
   "version": "1.9.7",
   "scripts": {
